--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -20,7 +20,7 @@ template(name='login')
                     input.password(type='password')
                 //- if username
                 if logging_in
-                    .ui.fluid.large.grey.circular.button.enter(title="Login #{username}" class=enter_class)
+                    .ui.fluid.large.circular.button.enter(title="Login #{username}" class=enter_class)
                         |login #{username}
                         i.right.chevron.icon
                 else
@@ -31,9 +31,9 @@ template(name='login')
                                 i.user.plus.icon
                                 |register
                 .ui.center.aligned.basic.segment    
-                    a.ui.circular.large.grey.button(href='/forgot_password')
+                    a.ui.circular.large.button(href='/forgot_password')
                         i.refresh.icon
                         |forgot password
-                    a.ui.circular.large.grey.button(href='/register') 
+                    a.ui.circular.large.button(href='/register') 
                         i.user.plus.icon
                         |register
