--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -12,8 +12,9 @@ template(name='user_edit')
                     //- i.cog.icon
                     +image_edit key='image_id' direct=true
                     +password_edit
-                    +phone_editor
-                    +username_edit
+                    if is_dev
+                        +phone_editor
+                        +username_edit
                     +emails_edit
                     if is_dev
                         with user_from_username_param
@@ -44,10 +45,11 @@ template(name='user_edit')
                         +date_edit key='id_checked_date' label='government id checked date' direct=true
                     else
                         +boolean_view key='government_id_checked' label='government id checked' direct=true
-                        +single_user_view key='id_checked_by_staff' label='government id checked by' role_filter='staff' direct=true
+                        +text_view key='id_checked_by_staff' label='government id checked by' role_filter='staff' direct=true
                         +date_view key='id_checked_date' label='government id checked date' direct=true
                         //- with user_from_username_param
-                    //- +array_edit key='tags' label='tags' direct=true
+                    if is_resident
+                        +array_edit key='tags' label='tags' direct=true
                     //- +text_edit key='spirit_animal' label='spirit animal' direct=true
                     //- +boolean_edit key='published' label='profile published'
                     //- +payment_methods
