--- a/client/profile/user_connections.jade
+++ b/client/profile/user_connections.jade
@@ -6,7 +6,7 @@ template(name='user_connections')
         unless is_user
             with user_from_username_param
                 +user_connect_button
-        .ui.tiny.grey.header connected to
+        .ui.tiny.grey.header people #{user_from_username_param.username} connected to
         .ui.middle.aligned.list
             each connections
                 +user_segment
