--- a/client/users.jade
+++ b/client/users.jade
@@ -160,5 +160,6 @@ template(name='user')
             +phone_view key='phone' label='Phone'
             +date_view key='start_date' label='Start Date'
             +date_view key='expiration_date' label='Expiration Date'
+            +user_connect_button
 
             
