--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -23,20 +23,36 @@ template(name='user_edit')
                                 |delete user
                 .column
                     .ui.form
-                        +text_edit key='first_name' label='first name' direct=true
-                        +text_edit key='last_name' label='last name' direct=true
                         if user_is_resident
-                            +text_edit key='address' label='address' direct=true
-                            +number_edit key='unit_number' label='unit #' direct=true
-                            +number_edit key='building_number' label='building #' direct=true
-                            +text_edit key='building_code' label='building code' direct=true
-                            +date_edit key='start_date' label='start date' direct=true
-                            unless user_is_owner
-                                +date_edit key='expiration_date' label='expiration date' direct=true
-                            +image_edit key='lease_agreement_image' label='lease agreement image' direct=true
+                            if is_staff
+                                +text_edit key='first_name' label='first name' direct=true
+                                +text_edit key='last_name' label='last name' direct=true
+                                +text_edit key='address' label='address' direct=true
+                                +number_edit key='unit_number' label='unit #' direct=true
+                                +number_edit key='building_number' label='building #' direct=true
+                                +text_edit key='building_code' label='building code' direct=true
+                                +date_edit key='start_date' label='start date' direct=true
+                                unless user_is_owner
+                                    +date_edit key='expiration_date' label='expiration date' direct=true
+                                +image_edit key='lease_agreement_image' label='lease agreement image' direct=true
+                            else
+                                +text_view key='first_name' label='first name' direct=true
+                                +text_view key='last_name' label='last name' direct=true
+                                +text_view key='address' label='address' direct=true
+                                +number_view key='unit_number' label='unit #' direct=true
+                                +number_view key='building_number' label='building #' direct=true
+                                +text_view key='building_code' label='building code' direct=true
+                                +date_view key='start_date' label='start date' direct=true
+                                unless user_is_owner
+                                    +date_view key='expiration_date' label='expiration date' direct=true
+                                +image_view key='lease_agreement_image' label='lease agreement image' direct=true
                         //- +text_edit key='email' label='Email' direct=true
                         +phone_edit key='phone' label='phone' direct=true
-                        //- +image_edit key='banner_image_id' label='Banner Image' direct=true
+                        +image_edit key='banner_image_id' label='Banner Image' direct=true
+                        +text_edit key='tagline' label='tag line' direct=true
+                        
+                        if is_resident
+                            +array_edit key='tags' label='tags' direct=true
                 .column
                     if is_staff
                         //- with user_from_username_param
@@ -48,8 +64,6 @@ template(name='user_edit')
                         +text_view key='id_checked_by_staff' label='government id checked by' role_filter='staff' direct=true
                         +date_view key='id_checked_date' label='government id checked date' direct=true
                         //- with user_from_username_param
-                    if is_resident
-                        +array_edit key='tags' label='tags' direct=true
                     //- +text_edit key='spirit_animal' label='spirit animal' direct=true
                     //- +boolean_edit key='published' label='profile published'
                     //- +payment_methods
