--- a/client/fields.jade
+++ b/client/fields.jade
@@ -623,7 +623,7 @@ template(name='signature_view')
         if icon
             i.grey.icon(class=icon)
         | #{title}    
-    img.ui.large.centered.rounded.image(src=field_value)
+    img.ui.fluid.centered.rounded.image(src=field_value)
     .ui.circular.basic.button.print_rules
         i.download.icon
         |Download PDF
