--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -2,18 +2,19 @@ template(name='rules_signing')
     with signing_doc
         +document_view key='rules_regs'
         +user_card resident
-        .ui.header I agree
+        .ui.header I agree to the Rules and Regulations
             if agree
                 i.huge.checkmark.green.link.icon.agree
             else
                 i.huge.circle.outline.grey.icon.agree
         if agree
+            .ui.header please sign
             if signature_saved
                 +signature_view key='signature' direct=true
-                i.pencil.icon.edit_signature
+                i.pencil.circular.large.icon.edit_signature
             else
                 +signature_edit key='signature' direct=true
             if signature_saved
-                .ui.big.circular.blue.fluid.button
+                .ui.big.circular.blue.fluid.button.submit_rules
                     |Submit
                     i.right.chevron.icon
